# privaci

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.dev.yml  compose.yml  cosmic-ray.toml  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-nlp.in  requirements-nlp.txt  requirements.in  requirements.txt
.cursor/rules/: branch-first.mdc  capability-test-registry.mdc  ci-before-commit.mdc  documentation.mdc  no-auto-merge.mdc  public-repo-language.mdc  resource-safety.mdc
.github/release-notes/: v0.1.0-beta.2.md  v0.1.0-beta.3.md  v0.1.0-beta.4.md  v0.1.0-beta.5.md  v0.1.0-beta.6.md  v0.1.0-beta.7.md  v1.0.0.md  v1.0.1.md  v1.0.2.md
.github/workflows/: ci.yml  docs-pages.yml  publish-pypi.yml  release.yml
deploy/demo-seed/: 01_schema.sql  02_seed.sql
docs/: README.md  cli-reference.md  configuration.md  deployment.md  error-codes.md  extending-privaci.md  index.md  local-development.md  object-output.md  observability.md  quickstart.md  state-schema.md  test-fixtures.md
docs/adr/: 0001-elv2-license.md  0002-python-3-12-runtime.md  0003-billing-dimension-source-dbs.md  0004-state-in-target-database.md  0005-salt-ux-no-silent-default.md  0006-copy-binary-streaming.md  0007-public-commercial-split.md  0008-fk-strategy-topo-sort-deferred.md  0009-postgres-native-partitioning.md  0010-constant-memory-streaming.md  0011-autodetect-confidence-scoring.md  README.md  template.md
docs/architecture/: memory-model.md  overview.md
docs/runbooks/: git-history-privacy.md  pack-signing.md  release-infrastructure.md
docs/spikes/: 2.1-copy-binary.md  2.2-spacy-throughput.md  2.3-cyclic-fk-deferred.md  README.md
docs/stylesheets/: brand.css
examples/: mask-rules.demo.yaml  mask-rules.example.yaml
openspec/: post-v1-roadmap.md
scripts/: agent-resource-guard.sh  agent-safe-test.sh  capability-test-precommit.sh  capability-test-suite.sh  capability-test.sh  check_capability_registry.py  check_contract_version.py  check_git_emails.py  check_implicit_contracts.py  check_pack_key.py  check_public_repo_language.py  check_todo_format.py  ci-local.sh  eval-stack.sh  generate_docs.py  generate_pack_signing_key.py  lint-helm.sh  load_sample_data.py  verify-image.sh
scripts/capability_test/: __main__.py  compose_dev.py  guard.py  insights.py  nlp.py  registry.py  report.py  runner.py  validators.py
scripts/spikes/: run_week1_spikes.py
src/privaci/: __init__.py  __main__.py  errors.py
tests/: __init__.py  conftest.py  test_cli.py  test_errors.py  test_secrets.py  test_spacy_requirements.py  test_version.py
tests/autodetect/: test_actions.py  test_freeform.py  test_matcher.py  test_report.py  test_scanner.py  test_type_aware.py
tests/catalog/: __init__.py  conftest.py  test_detectors.py  test_graph.py  test_identifiers.py  test_implied_fk_integration.py  test_introspect.py  test_introspect_unit.py  test_models.py  test_partitions.py  test_partitions_unit.py  test_skipped_objects.py  test_snapshot.py  test_snapshot_partitions.py  test_snapshot_persist.py  test_snapshot_resume.py  test_views_integration.py
tests/cli/: test_detect_drift.py  test_error_boundary.py  test_execute_resume.py  test_execute_run.py  test_generate_ci.py  test_resume_cmd.py  test_run.py
tests/config/: __init__.py  conftest.py  test_actions.py  test_loader.py  test_models.py
tests/contracts/: __init__.py  test_fallbacks.py
tests/deployment/: test_dockerfile.py
tests/docs/: test_generate_docs.py
tests/fixtures/: builders.py  canonical_catalog_snapshot.json  conftest.py  constants.py  test_builders.py  test_edge_case_sql.py  test_mini_schema_integration.py
tests/integration/: __init__.py  assertions.py  (+19 more)
(+355 files in other folders)
